--- a/docs/main.tex
+++ b/docs/main.tex
@@ -120,7 +120,7 @@
 
 \title{Ling 411 - Fall 2023}
 \author{Ümit Atlamaz}
-\date{2023-10-31}
+\date{2023-11-03}
 
 \begin{document}
 \maketitle
@@ -3193,7 +3193,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 \hypertarget{plotting-1}{%
 \chapter{Plotting}\label{plotting-1}}
 
-(31 October, 2023, 07:41)
+(03 November, 2023, 09:47)
 
 \hypertarget{the-basics-of-ggplot2}{%
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}}
@@ -3764,7 +3764,7 @@ Here's another one where we provide the \textbf{mean} and \textbf{standard devia
 \end{Highlighting}
 \end{Shaded}
 
-Let us plot the seconf normally distributed data using a histogram.
+Let us plot the second normally distributed data using a histogram.
 
 \begin{Shaded}
 \begin{Highlighting}[]
