--- a/docs/main.tex
+++ b/docs/main.tex
@@ -120,7 +120,7 @@
 
 \title{Ling 411 - Fall 2023}
 \author{Ümit Atlamaz}
-\date{2023-12-12}
+\date{2023-12-15}
 
 \begin{document}
 \maketitle
@@ -3193,7 +3193,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 \hypertarget{plotting-1}{%
 \chapter{Plotting}\label{plotting-1}}
 
-(12 December, 2023, 11:38)
+(15 December, 2023, 10:13)
 
 \hypertarget{the-basics-of-ggplot2}{%
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}}
@@ -7482,6 +7482,8 @@ Even though our effect size is large as can be seen below, our results are \text
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{type-i-and-type-ii-errors}{%
+\section{Type I and Type II Errors}\label{type-i-and-type-ii-errors}}
 
   \bibliography{book.bib,packages.bib}
 
